# projectJWT

./: db.sqlite3  manage.py  pyproject.toml
events/: models.py
events/api/: permissions.py  serializaers.py  urls.py  views.py
events/migrations/: 0001_initial.py
projectJWT/: asgi.py  settings.py  urls.py  wsgi.py
